# struthionidae

./: .gitignore  Cargo.toml  docker-compose.yml  rustfmt.toml  shit.txt
001-async-await-and-custom-test-framework/src/: cmd.rs  lib.rs
002-string-caching-and-interning/: Cargo.toml
003-arenas-and-bytes/: Cargo.toml  README.md
003-arenas-and-bytes/ffi/: CMakeLists.txt
003-arenas-and-bytes/ffi/src/: arena_and_bytes_ffi.h
003-arenas-and-bytes/ffi/tests/: arena_and_bytes_ffi_test.c
003-arenas-and-bytes/src/: lib.rs
004-rust-shell-scripting/: Cargo.toml  README.md
004-rust-shell-scripting/src/: lib.rs  process.rs
src/: main.rs
struthionidae/: Cargo.toml
struthionidae/benches/: biginput.array  bytes_to_hex.rs
struthionidae/src/: lib.rs
x001-async-await-and-custom-test-framework/: Cargo.toml  README.md  docker-compose.yml
x001-async-await-and-custom-test-framework/src/: framework.rs  main.rs  test_resources.rs
x002-string-caching-and-interning/: Cargo.toml
x002-string-caching-and-interning/src/: lib.rs
x003-arenas-and-bytes/: Cargo.toml  rustfmt.toml
x003-arenas-and-bytes/ffi/: CMakeLists.txt
x003-arenas-and-bytes/ffi/src/: arena_and_bytes_ffi.h
x003-arenas-and-bytes/src/: lib.rs
x004-rust-shell-scripting/: Cargo.toml  print-alphabet.sh
x004-rust-shell-scripting/src/: lib.rs  process.rs
x004-rust-shell-scripting/src/pipe/: linux.rs  mod.rs
x005-trees/: Cargo.toml
x005-trees/src/: graph.rs  lib.rs  main.rs  shared.rs  str.rs
