[package]
name = "postgre-state-fabric"
version = "0.1.0"
authors = ["Dillon <dillon@dillonhicks.io>"]
edition = "2018"

[dependencies]
postgres = "^0.15"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
failure = "^0.1.5"
log = "^0.4.8"
url = "^2.1.0"
indexmap = "^1.0.2"
parking_lot = "^0.9.0"