[package]
name = "x001-async-await-and-custom-test-framework"
version = "0.1.0"
authors = ["Dillon <dillon@dillonhicks.io>"]
edition = "2018"

[[bin]]
name = "spinnaker-core-demo"
path = "src/main.rs"

[lib]
name = "spinnaker"
path = "src/lib.rs"

[dependencies]
postgres = "^0.15"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
failure = "^0.1.5"
log = "^0.4.8"
url = "^2.1.0"
indexmap = "^1.0.2"
parking_lot = "^0.9.0"
serde_json = "^1.0.40"
serde = { version = "^1" , optional = true }
tempfile = "^3.1"

# for logging to console
env_logger = "^0.6.2"



[features]
default = ["serialize"]
serialize = ["serde", "serde/derive"]